MESSAGE(STATUS "Adding mods:")
ADD_LIBRARY(mod_audio mod_audio.cpp)
MESSAGE(STATUS "* mod_audio")
ADD_LIBRARY(mod_avatar mod_avatar.cpp)
MESSAGE(STATUS "* mod_avatar")
ADD_LIBRARY(mod_cam mod_cam.cpp)
MESSAGE(STATUS "* mod_cam")
ADD_LIBRARY(mod_nel mod_nel.cpp)
MESSAGE(STATUS "* mod_nel")
ADD_LIBRARY(mod_avatar_configurator mod_avatar_configurator.cpp)
MESSAGE(STATUS "* mod_avatar_configurator")
ADD_LIBRARY(mod_time mod_time.cpp)
MESSAGE(STATUS "* mod_time")
