MESSAGE(STATUS "Adding views:")
ADD_LIBRARY(view_avatar_show_case view_avatar_show_case.cpp)
MESSAGE(STATUS "* view_avatar_show_case")
ADD_LIBRARY(view_scene_make_avatar view_scene_make_avatar.cpp)
MESSAGE(STATUS "* view_scene_make_avatar")
ADD_LIBRARY(view_avatar_configurator view_avatar_configurator.cpp)
MESSAGE(STATUS "* view_avatar_configurator")
ADD_LIBRARY(view_fps view_fps.cpp)
MESSAGE(STATUS "* view_fps")
